# sideload-utility

./: .gitignore  README.md  meson.build  org.vanillaos.Sideload.json  org.vanillaos.Sideloader.json
.github/workflows/: ci.yml
data/: meson.build  org.vanillaos.Sideload.appdata.xml.in  org.vanillaos.Sideload.desktop.in  org.vanillaos.Sideload.gschema.xml  org.vanillaos.Sideloader.appdata.xml.in  org.vanillaos.Sideloader.desktop.in  org.vanillaos.Sideloader.gschema.xml
data/icons/: meson.build
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  ar.po  de.po  en_GB.po  eo.po  es.po  fi.po  fr.po  ga.po  id.po  kab.po  lo.po  meson.build  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  ta.po  tr.po  uk.po  vanilla-sideload.pot  vi.po  zh_Hans.po  zh_Hant.po
src/: main.py  meson.build  run_command.py  sideloader.gresource.xml  sideloader.in  window.py
src/gtk/: window.blp
vanilla_sideload/: main.py  meson.build  vanilla-sideload.gresource.xml  vanilla-sideload.in  window.py  window.ui
vanilla_sideload/backend/: android.py  dpkg.py  meson.build  types.py  utils.py
vanilla_sideload/gtk/: view-fail.ui  view-install-done.ui  view-install.ui  view-loading.ui  view-uninstall-done.ui  view-uninstall.ui  window.ui
vanilla_sideload/utils/: meson.build  run_async.py
vanilla_sideload/views/: fail.py  install.py  install_done.py  loading.py  meson.build  uninstall.py  uninstall_done.py
